fixed bullet shape distortion by setting flex-shrink to 0

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -156,6 +156,9 @@ body{
                     border: none;
                     transition: ease-in-out .35s;
                     cursor: pointer;
+
+                    display: flex;
+                    flex-shrink: 0;
                     @media screen and (max-width: 415px){
                         height: .8rem;
                         width: .8rem;
